--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,12 @@ BETTER_AUTH_SECRET=your_random_secret_key_here
 # Production: https://your-domain.com
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# AhaSend Email Service (Required for email verification)
+# Get your API key from: https://ahasend.com
+AHASEND_API_KEY=your_ahasend_api_key_here
+EMAIL_FROM_DOMAIN=authmail.kilonovaventures.com
+EMAIL_FROM_NAME=Kilonova LLM Council
+
 # Optional: OAuth Providers
 # Uncomment and add credentials if you want to use social login
 # GOOGLE_CLIENT_ID=your_google_client_id
