--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,11 @@ EMAIL_FROM_NAME=Kilonova LLM Council
 # Uncomment and add credentials if you want to use social login
 # GOOGLE_CLIENT_ID=your_google_client_id
 # GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+
+AWS_ACCESS_KEY_ID=your_access_key_id
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-bucket-name
+AWS_S3_UPLOAD_PREFIX=uploads/
+AWS_S3_SIGNED_URL_EXPIRATION=3600
