--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ data/
 
 # test scripts output
 scripts/*.log
+scripts/
 
 # IDE
 .idea/
@@ -64,3 +65,5 @@ scripts/*.log
 *~
 sendgrid.env
 /logs/
+
+CLAUDE.md
